TESTS/isolation-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: isolation-test-pod
  labels:
    app: iso-test
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
    - containerPort: 80
