TESTS/isolation-test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: isolation-test-svc
spec:
  type: ClusterIP
  selector:
    app: iso-test
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
