TESTS/testing-v-admin-isolation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: isolation-test-pod
  labels:
    app: iso-test
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: isolation-test-svc
spec:
  type: ClusterIP
  selector:
    app: iso-test
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iso-test-ing
spec:
  ingressClassName: nginx
  rules:
  - host: iso-test.thinkport.digital
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: isolation-test-svc
            port:
              number: 80
